rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__for_stmt_no_initializer.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (for_stmt_no_initializer),\n\"for (; i < 10; i++) { a; }\").into_iter().map(| stmt |\nstmt.to_string()).collect :: < Vec < _ >> ().join(\"\\n\")"
---
for (; (i < 10); i++;) {
  a;
}
