rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__foreach_loop.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (foreach_loop), \"foreach a(b) { c; d; }\")"
---
[
    Foreach(
        Foreach {
            var: Ident(
                "a",
            ),
            array: Atom(
                Ident(
                    Ident(
                        "b",
                    ),
                ),
            ),
            block: Block {
                items: [
                    ExprStmt(
                        Atom(
                            Ident(
                                Ident(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                    ExprStmt(
                        Atom(
                            Ident(
                                Ident(
                                    "d",
                                ),
                            ),
                        ),
                    ),
                ],
            },
        },
    ),
]
