rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__foreach_loop_single_stmt.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (foreach_loop_single_stmt), \"foreach a(b) c;\")"
---
[
    Foreach(
        Foreach {
            var: Ident(
                "a",
            ),
            array: Atom(
                Ident(
                    Ident(
                        "b",
                    ),
                ),
            ),
            block: Block {
                items: [
                    ExprStmt(
                        Atom(
                            Ident(
                                Ident(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                ],
            },
        },
    ),
]
