rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__function_declaration_with_decls.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (function_declaration_with_decls),\n\"function a(b) {c = 3;}\")"
---
[
    FnDecl(
        FnDecl {
            fn_name: Ident(
                "a",
            ),
            args: CommaSeparated {
                items: [
                    Ident(
                        "b",
                    ),
                ],
                delimiter: Paren,
            },
            block: Block {
                items: [
                    Assignment(
                        Assignment {
                            lhs: PlaceExpr {
                                ident: Ident(
                                    "c",
                                ),
                                array_accesses: [],
                            },
                            op: Equal,
                            rhs: Atom(
                                Literal(
                                    Number(
                                        3,
                                    ),
                                ),
                            ),
                        },
                    ),
                ],
            },
        },
    ),
]
