rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__if_stmt_else_if.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (if_stmt_else_if),\n\"if (a) { b; } else if (c) { d; } else { e; }\")"
---
[
    If(
        If {
            if_branches: [
                (
                    Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    Block {
                        items: [
                            ExprStmt(
                                Atom(
                                    Ident(
                                        Ident(
                                            "b",
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    },
                ),
                (
                    Atom(
                        Ident(
                            Ident(
                                "c",
                            ),
                        ),
                    ),
                    Block {
                        items: [
                            ExprStmt(
                                Atom(
                                    Ident(
                                        Ident(
                                            "d",
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    },
                ),
            ],
            else_branch: Some(
                Block {
                    items: [
                        ExprStmt(
                            Atom(
                                Ident(
                                    Ident(
                                        "e",
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ),
        },
    ),
]
