rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__if_stmt_no_else.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (if_stmt_no_else), \"if (a) { b; }\")"
---
[
    If(
        If {
            if_branches: [
                (
                    Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    Block {
                        items: [
                            ExprStmt(
                                Atom(
                                    Ident(
                                        Ident(
                                            "b",
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    },
                ),
            ],
            else_branch: None,
        },
    ),
]
