rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__include.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (include), \"include(\\\"test.inc\\\");\")"
---
[
    Stmt(
        Include(
            Include {
                path: String(
                    "test.inc",
                ),
            },
        ),
    ),
]
